--- a/CSS-Basic/youtube-frontpage/youtube.css
+++ b/CSS-Basic/youtube-frontpage/youtube.css
@@ -1,29 +1,32 @@
-p {
-  font-family: Roboto, Arial;
-  margin: 0;
-}
-
-.search-bar {
-  width: 300px;
-  padding: 8px 8px;
-  font-size: 14px;
-  border: 1px solid rgb(161, 161, 161);
-  margin: 5px;
-}
-
 .video-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   row-gap: 35px;
   column-gap: 20px;
+  background-color: rgb(247, 247, 247);
 }
 
 .thumbnail-row {
   margin-bottom: 12px;
+  position: relative;
 }
 
 .thumbnail {
   width: 100%;
+}
+
+.video-time {
+  background-color: black;
+  color: white;
+  padding: 3px 4px;
+  border-radius: 2px;
+  font-size: 12px;
+  font-weight: bold;
+  font-family: Roboto, Arial;
+
+  position: absolute;
+  bottom: 10px;
+  right: 5px;
 }
 
 .video-info-grid {
