Finishing CSS practice with youtube clone

--- a/CSS-Basic/youtube-frontpage/sidebar.css
+++ b/CSS-Basic/youtube-frontpage/sidebar.css
@@ -2,21 +2,32 @@
   left: 0;
   bottom: 0;
   position: fixed;
+  padding-top: 5px;
   top: 55px;
-  width: 70px;
+  width: 75px;
   background-color: white;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: top;
+  z-index: 101;
 }
 
-.home-icon,
-.explore-icon,
-.subscriptions-icon,
-.originals-icon,
-.youtube-music-icon,
-.library-icon {
+.sidebar-link {
+  height: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.sidebar-link:hover {
+  background-color: rgb(235, 234, 234);
+}
+
+.sidebar-link img {
   height: 25px;
+  margin-bottom: 7px;
+}
+
+.sidebar-link div {
+  font-family: Roboto, Arial;
+  font-size: 10px;
 }
