--- a/CSS-Basic/youtube-frontpage/general.css
+++ b/CSS-Basic/youtube-frontpage/general.css
@@ -1,7 +1,9 @@
 body {
   margin: 0;
   padding-top: 80px;
-  padding-left: 95px;
+  padding-left: 96px;
+  padding-right: 24px;
+  background-color: rgb(247, 247, 247);
 }
 
 p {
