--- a/CSS-Basic/youtube-frontpage/header.css
+++ b/CSS-Basic/youtube-frontpage/header.css
@@ -22,10 +22,12 @@
 .hamburger-menu {
   height: 23px;
   margin: auto 24px;
+  cursor: pointer;
 }
 
 .youtube-logo {
   height: 22px;
+  cursor: pointer;
 }
 
 .middle-header {
@@ -53,6 +55,17 @@
   font-size: 16px;
 }
 
+.search-button,
+.voice-search-button,
+.upload-icon-container,
+.app-icon-container,
+.notification-icon-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .search-button {
   height: 40px;
   width: 70px;
@@ -60,11 +73,41 @@
   border: 1px solid rgb(199, 198, 198);
   border-radius: 2px;
   background-color: rgb(241, 236, 236);
+  cursor: pointer;
+  position: relative;
+}
+
+.search-button .tooltip,
+.voice-search-button .tooltip,
+.upload-icon-container .tooltip,
+.app-icon-container .tooltip,
+.notification-icon-container .tooltip {
+  position: absolute;
+  background-color: gray;
+  color: white;
+  padding: 4px 8px;
+  font-family: Roboto, Arial;
+  font-size: 12px;
+  bottom: -30px;
+  opacity: 0;
+  transition: opacity 0.15s;
+  pointer-events: none;
+  white-space: nowrap;
+}
+
+.search-button:hover .tooltip,
+.voice-search-button:hover .tooltip,
+.upload-icon-container:hover .tooltip,
+.app-icon-container:hover .tooltip,
+.notification-icon-container:hover .tooltip {
+  opacity: 1;
+}
+.search-button:hover {
+  background-color: rgb(226, 223, 223);
 }
 
 .search-icon {
   height: 70%;
-  margin-top: 4px;
 }
 
 .voice-search-button {
@@ -74,11 +117,16 @@
   border: none;
   background-color: rgb(247, 245, 245);
   border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+}
+
+.voice-search-button:hover {
+  background-color: rgb(228, 224, 224);
 }
 
 .voice-search-icon {
   height: 65%;
-  margin-top: 5px;
 }
 
 .right-header {
@@ -94,10 +142,12 @@
 .app-icon,
 .notification-icon {
   height: 25px;
+  cursor: pointer;
 }
 
 .notification-icon-container {
   position: relative;
+  cursor: pointer;
 }
 
 .notification-count {
@@ -115,4 +165,5 @@
 .my-channel-image {
   height: 30px;
   border-radius: 50%;
+  cursor: pointer;
 }
